# mongoconnectx576pkg

./: LICENSE  README.md  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml  python-publish.yaml
src/mongo_connect/: mongo_crud.py
