[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.7

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
MongoDB-Connect=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py